# civic-hack

./: .gitignore  BLOG.md  README.md
catkin_ws_civic/devel/: .catkin  .rosinstall  setup.sh
catkin_ws_civic/src/panda_bridge_ros/: CMakeLists.txt
honda_controlling_scripts/: CMakeLists.txt  brake.dump  package.xml  panda_can_stuff.py  parse_braking_msgs.py  set_accel.py  set_braking.py  set_steering.py
honda_controlling_scripts/scripts/: accum_info.py  accum_msgs_tools.py  can_listener_node_civic.py  clean_rosbag_for_braking.py  filter_accum_only_adas.py  honda_create_msgs.py  joy_to_brake.py  joy_to_gas.py  joy_to_steer.py  joy_to_steer_brake_gas.py  keep_id_and_bus_from_accum.py  keep_ids_from_accum.py  old_replay_raw_msgs.py  remove_ids_from_accum.py  replace_id_and_message_from_accum.py  replace_steering.py  replay_accum.py  replay_on_original_bus.py  set_accel.py  set_brake_steer_and_cruise_control.py  set_braking.py  set_cont_gas.py  set_continous_steering.py  set_continuous_braking.py  set_hud.py  set_steer_brake_gas.py  set_steer_brake_gas_via_engine.py  steering.dump  store_raw_messages.py
panda_bridge_ros/: CMakeLists.txt  README.md  Understood_messages.md  package.xml
panda_bridge_ros/config/: honda_civic_touring_2016_can_for_cantools.dbc
panda_bridge_ros/data/: brake_filtered.bag  example_msgs_2018-03-11-16-42-27.bag  test_brake_2018-03-11-23-54-28.bag
panda_bridge_ros/script/: bridge_and_send.py  frame_decoder.py  panda_bridge_ros.py
panda_bridge_ros/scripts/: bridge_and_send.py  panda_bridge_ros.py
(+2 files in other folders)
